--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <h1 id="activity-name">Know your activity by pressing the button</h1>
-      <button class="btn" onclick="getMessage()">
-        Check the activity you should do now!
-      </button>
-    </div>
+    
+      <h1>🤖 BoredBot 🤖</h1>
+      <h4 id="activity-name">Find something to do</h4>
+      
+      <button onclick="getMessage()"></button>
+  
     <script src="app.js"></script>
   </body>
 </html>
